# mbc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mbc/: __init__.py  _utils.py  models.py
mbc/control/: __init__.py  _base.py  cd_linearized_mpc.py  cd_mpc.py  cd_ocp.py  continuous_linear_ocp.py  continuous_linearised_ocp.py  continuous_ocp.py  discrete_linear_ocp.py  discrete_linearised_ocp.py  enmpc.py  forecast_ocp.py  input_linear_cost.py  linearised_discrete_mpc.py  mpc.py  mpc_horizon.py  nlp_solver.py  ocp.py  qp_solver.py
mbc/estimation/: __init__.py  _base.py  _ensemble.py  cd_kalman.py  continuous_discrete_dae_ekf.py  continuous_discrete_ekf.py  continuous_discrete_enkf.py  continuous_discrete_linear_kf.py  continuous_discrete_pf.py  continuous_discrete_ukf.py  delayed.py  delayed_observation_filter.py  discrete_linear_kf.py  (+6 more)
scripts/: analytical_jacobian_benchmark.py  bioreactor_comparative.py  bioreactor_ekf_visual.py  delayed_observation_visual.py  double_integrator_mpc_visual.py  filter_evaluation.py  first_order_lag_cd_mpc_visual.py  heated_room_linearised_ocp_visual.py  isomerisation_dae_ekf_visual.py  nlp_solver_benchmark.py  nonlinear_double_integrator_ldmpc_visual.py  qp_formulation_benchmark.py  scalar_bounded_lmmpc_visual.py  van_de_vusse_enmpc_visual.py
tests/: conftest.py  ocp_fixtures.py  test_absolute_input_regularisation.py  test_benchmark_jacobians.py  test_delayed.py  test_ekf.py  test_enmpc.py  test_identification.py  test_input_linear_cost.py  test_mpc.py  test_nlp_solver.py  test_ocp.py  test_qp_solver.py  test_realization.py
(+36 files in other folders)
