[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mbc"
version = "0.1.0"
description = "Generic model-based control library for linear discrete-time systems"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "osqp>=1.0",
    "highspy",
]

[project.optional-dependencies]
ipopt = ["cyipopt"]

[tool.setuptools.packages.find]
include = ["mbc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
